--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -26,7 +26,9 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam aliquid dicta ipsa accusamus. Quasi, laudantium voluptates at minus tempore, maiores doloribus est autem deserunt amet porro odio, recusandae necessitatibus possimus?
     </p>
 
-    <iframe src="../ex023/tabelas006.html" frameborder="0" width="500" height="500"></iframe>
+    <iframe src="../ex023/tabelas006.html" frameborder="0" width="500" height="500">
+        <p>Infelizmente seu navegador não é compatível</p>
+    </iframe>
 
     <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae iusto minus ea. Modi, ut ipsa! Dolorem quidem minus deleniti odit repellendus quas ipsam rem ullam, similique sint, tempore ad totam?
