--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -35,7 +35,7 @@
     <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint excepturi dolorum eligendi id molestiae ratione officiis modi aspernatur non. Dolore neque impedit enim exercitationem dignissimos? Labore cumque suscipit vel nam.
     </p>
-    <iframe id="tela" name="frame" src="" frameborder="0"></iframe>
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere sed illo natus asperiores obcaecati sint inventore? Quas blanditiis, corporis alias exercitationem voluptas nisi deleniti voluptatum non magnam provident iusto doloremque? </p> <img src='imge/nasa.png'>" frameborder="0"></iframe>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere sed illo natus asperiores obcaecati sint inventore? Quas blanditiis, corporis alias exercitationem voluptas nisi deleniti voluptatum non magnam provident iusto doloremque?
     </p>
