--- a/exercicios/ex025/forma005.html
+++ b/exercicios/ex025/forma005.html
@@ -21,9 +21,11 @@
 
     <!-- a propiedade action="" e utilizado pra colocar o nome da linguagem com o qual iremos trabalhar mais tarde  -->
 
+    <!-- para algumas linguens e para o html e importante queconste o (name )exemplo php e o propio html para outras linguagrens como javascrip utiçlizamosmais o id="" -->
+
     <form action="cadastro.php" autocomplete="off">
-        <p>Nome: <input type="text" name="nome" id="nome"> </p><br>
-        <p>Sobrenome: <input type="text" name="sobrenome" id="sobrenome"> </p><br>
+        <p><label for="inome">Nome:</label> <input type="text" name="nome" id="inome"> </p><br>
+        <p><label for="isobrenome">Sobrenome:</label> <input type="text" name="sobrenome" id="isobrenome"> </p><br>
         <input type="submit" value="enviar">
     </form>
 </body>
