--- a/exercicios/ex025/form002.html
+++ b/exercicios/ex025/form002.html
@@ -20,6 +20,6 @@
             <input type="submit" value="enviar">
             <input type="reset" value="limpar">
         </p>
-    </>
+     </form>
 </body>
 </html>
