--- a/exercicios/ex026/mq001/index.html
+++ b/exercicios/ex026/mq001/index.html
@@ -7,6 +7,9 @@
     <title>Midia Query</title>
 
     <!-- Aqui começa as Midias Quiries -->
+    <!-- midia Quiries == mideas types + mideas features -->
+    <!-- midias types : tipos de mideas
+    midias features : caracteristicas de mideas -->
 
     <link rel="stylesheet" href="css/tela.css" media="screen">
     <link rel="stylesheet" href="css/impressora.css" media="print">
