--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,13 @@
     <title>Media Query</title>
     <link rel="stylesheet" href="estilos/style.css">
 </head>
+
 <body>
     <header>
         <h1>Meu site</h1>
-        <menu>
+        <div id="ico" onclick="clickmenu()"><img  src="imagem/outline_menu_white_24dp.png" alt="" width="35"></div>
+        </span>
+        <menu id="itens">
             <ul>
                 <li><a href="">Opção 1</a></li>
                 <li><a href="">Opção 2</a></li>
@@ -24,14 +28,33 @@
         <article>
             <h2>Testando Media Queries</h2>
 
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti a ipsum maiores obcaecati delectus nesciunt eum animi temporibus necessitatibus. Architecto similique ullam molestias adipisci neque impedit optio, doloribus vero provident.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti a ipsum maiores obcaecati delectus
+                nesciunt eum animi temporibus necessitatibus. Architecto similique ullam molestias adipisci neque
+                impedit optio, doloribus vero provident.</p>
 
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio odit praesentium id maiores quod. Maxime similique obcaecati dignissimos ratione delectus, in dolorum accusantium repudiandae molestiae eaque voluptatem impedit, veniam sequi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio odit praesentium id maiores quod. Maxime
+                similique obcaecati dignissimos ratione delectus, in dolorum accusantium repudiandae molestiae eaque
+                voluptatem impedit, veniam sequi!</p>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, quam. Ratione minima error vero eaque nulla, aspernatur dolor ipsam pariatur provident aperiam illo necessitatibus sunt praesentium iure cum recusandae ipsum.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, quam. Ratione minima error vero eaque
+                nulla, aspernatur dolor ipsam pariatur provident aperiam illo necessitatibus sunt praesentium iure cum
+                recusandae ipsum.</p>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, numquam sequi recusandae ullam consequuntur vitae officia animi doloribus pariatur nam debitis eligendi ut. Aut culpa blanditiis numquam alias impedit assumenda.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, numquam sequi recusandae ullam
+                consequuntur vitae officia animi doloribus pariatur nam debitis eligendi ut. Aut culpa blanditiis
+                numquam alias impedit assumenda.</p>
         </article>
     </main>
+    <script>
+        function clickmenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
+            
+        }
+    </script>
 </body>
+
 </html>
