--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -7,9 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilo/media-queries.css">
 </head>
 
-<body>
+ <body onresize="tamanho()"> 
     <header>
         <h1>Meu site</h1>
         <div id="ico" onclick="clickmenu()"><img  src="imagem/outline_menu_white_24dp.png" alt="" width="35"></div>
@@ -46,13 +47,21 @@
         </article>
     </main>
     <script>
+        function tamanho() {
+            if (window.innerWidth >= 768) {
+                itens.style.display = 'block'
+            } else {
+                itens.style.display = 'none'
+            }
+        }
+
+
         function clickmenu() {
             if (itens.style.display == 'block') {
                 itens.style.display = 'none'
             } else {
                 itens.style.display = 'block'
-            }
-            
+            }    
         }
     </script>
 </body>
